--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -49,6 +49,15 @@ body {
 	width: 100%;
 	max-width: 1170px;
 	margin: 0 auto;
+	@media (max-width: 992px) {
+		padding: 0 15px;
+	}
+	@media (max-width: 768px) {
+		padding: 0 15px;
+	}
+	@media (max-width: 480px) {
+		padding: 0 15px;
+	}
 }
 
 main {
@@ -298,7 +307,7 @@ main {
 
 /*=========================================NEWS&MEDIA==================================*/
 
-.media {
+/*.media {
 	&__header {
 		display: flex;
 		align-items: center;
@@ -311,7 +320,7 @@ main {
 	&__title {
 	}
 
-	&__radio {
+	&__category {
 		display: inline-block;
 		font-size: 16px;
 		line-height: 16px;
@@ -338,18 +347,10 @@ main {
 	}
 
 	.item-media {
-		&__radio {
+		&__category {
 			font-size: 12px;
 			line-height: 16px;
 			color: #ffffff;
-			font-weight: 700;
-		}
-
-		&__image {
-			display: inline-block;
-			position: relative;
-			width: fit-content;
-			height: fit-content;
 			margin-bottom: 30px;
 			overflow: hidden;
 			img {
@@ -392,330 +393,477 @@ main {
 				background-color: #007397;
 				color: #fff;
 			}
-		}
-	}
-
-	/*=========================================ADAPTIVE==================================*/
-	@media (max-width: 1170px) {
-		.container {
-			max-width: 970px; /*!*/
-		}
-		.menu__list li {
-			margin-right: 25px; /*!*/
+		}		font-weight: 700;
 		}
 
-		.motto__text {
-			max-width: 670px; /*!*/
-			font-size: 28px; /*!*/
-			line-height: 44px; /*!*/
-		}
-		.index__parameter {
-			font-size: 14px;
-			line-height: 28px;
-		}
-
-		.ir {
-			&__title {
-				margin-bottom: 20px;
-			}
-			&__text {
-				margin-bottom: 34px;
-			}
-			&__index {
-				margin-bottom: 34px;
-			}
-		}
-
-		.about {
-			margin-bottom: 85px;
-		}
-
-		.item-media__title {
-			top: 175px;
-		}
-
-		.item-media__image.bluebg {
-			&:after {
-				width: 110%;
-				height: 150%;
-				top: -77px;
-				left: -88px;
-			}
-		}
-	}
-	/*====================НОВЫЙ БРЕЙКПОИНТ==============*/
-	@media (max-width: 992px) {
-		.container {
-			max-width: 750px; /*!*/
-		}
-		.header__row {
-			height: 70px;
-		}
-
-		.menu__list li {
-			margin-right: 15px; /*!*/
-		}
-		.header__logo {
-			width: 130px;
-		}
-
-		.menu__link {
-			font-size: 11px;
-		}
-
-		.menu__link--location {
-			padding-right: 28px;
-		}
-
-		.menu__link--location:after {
-			width: 18px;
-			background-size: contain;
-			right: 5px;
-		}
-
-		.about__motto {
-			margin-bottom: 25px;
-		}
-
-		.motto {
-			height: 300px;
-		}
-
-		.motto__text {
-			max-width: 500px; /*!*/
-			font-size: 20px; /*!*/
-			line-height: 35px; /*!*/
-			bottom: 50px;
-		}
-
-		.text {
-			font-size: 16px;
-			line-height: 28px;
-		}
-
-		.centered-block__button {
-			margin-top: 25px;
-		}
-		.about {
-			margin-bottom: 75px;
-		}
-
-		.index__value {
-			font-size: 44px;
-		}
-
-		.index__parameter {
-			font-size: 11px;
-			line-height: 22px;
-		}
-
-		.ir {
-			&__title {
-				margin-bottom: 16px;
-			}
-			&__text {
-				margin-bottom: 26px;
-			}
-			&__index {
-				margin-bottom: 26px;
-			}
-		}
-		.about {
-			margin-bottom: 60px;
-		}
-		.item-media__image.bluebg {
-			&:after {
-				width: 110%;
-				height: 150%;
-				top: -77px;
-				left: -60px;
-			}
-		}
-
-		.item-media__title {
-			top: 75px;
-			font-size: 18px;
-			line-height: 24px;
-			max-width: 75%;
-		}
-	}
-	/*====================НОВЫЙ БРЕЙКПОИНТ==============*/
-	@media (max-width: 767px) {
-		.header__row {
-			height: 50px;
-			padding: 0 10px;
-		}
-
-		.header__logo {
+		&__image {
+			display: inline-block;
 			position: relative;
-			z-index: 2;
-		}
+			width: fit-content;
+			height: fit-content;
+	
+	}*/
 
-		.header__menu {
-			position: fixed;
-			width: 100%;
-			height: 100%;
-			top: -100%;
-			left: 0; /*По умолчанию убираем меню, чтобы вызвать его далее при нажатии на бургер*/
-			z-index: 1;
-			background-color: #fff;
-			padding: 100px 10px 20px 10px;
-			overflow: auto; /*Важный элемент адаптива, чтобы можно было на узких мобилках долистать до всех пунктов меню*/
-			transition: 0.5s 0s;
-			&.active {
-				top: 0;
-			}
-		}
-		.menu__list {
+.media {
+	&__header {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		margin-bottom: 40px;
+		@media (max-width: 768px) {
 			display: block;
+			margin-bottom: 20px;
 		}
+	}
 
-		.menu__list li {
-			text-align: center;
+	&__title {
+		@media (max-width: 768px) {
+			margin-bottom: 20px;
+		}
+	}
+
+	&__header-column:nth-child(2) {
+		@media (max-width: 768px) {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+		}
+	}
+
+	&__category {
+		font-size: 16px;
+		color: #d3cfce;
+		font-weight: 700;
+		text-transform: uppercase;
+		margin-left: 66px;
+		@media (max-width: 992px) {
+			margin-left: 50px;
+		}
+		@media (max-width: 768px) {
 			margin: 0;
-			padding-bottom: 30px;
-			&:last-child {
-				padding-bottom: 0;
-			}
 		}
+	}
+	&:hover {
+		color: #007397;
+	}
 
-		.menu__link {
-			font-size: 16px;
+	&__body {
+		display: flex;
+		margin: 0 -15px;
+		margin-bottom: 75px;
+		@media (max-width: 992px) {
+			flex-wrap: wrap;
 		}
+	}
 
-		/*В заготовках в свойствах бургера прописана позиция абсолют, 
-	но html-код в данной ситуации позволяет отказаться от абсолюта.*/
-		.header__burger {
-			display: block; /*Задает для бургера block, а не inline-block. 
-		Но разницы наверное нет, так как высота и ширина фикс.*/
-			width: 40px;
-			height: 30px;
-			position: relative;
-			cursor: pointer; /*!*/
-			z-index: 2;
+	&__column {
+		flex: 0 0 33.3333%;
+		padding: 0 15px;
+		/*Отдельный отступ от нижней части последнего внутреннего блока и отдельный отступ от общего блока.
+		Таким оборазом при flex-wrap наш внутренний блок будет иметь собственный отступ и не склеиваться.*/
+		margin-bottom: 35px;
+		@media (max-width: 992px) {
+			flex: 0 0 50%;
 		}
-
-		.header__burger span {
-			position: absolute;
-			width: 100%;
-			height: 4px;
-			left: 0;
-			background-color: #646667;
-			transition: 0.3s 0s; /*!*/
+		@media (max-width: 630px) {
+			flex: 1 1 100%;
 		}
+	}
+}
 
-		.header__burger span:nth-child(1) {
+.item-media {
+	max-width: 500px;
+	margin: 0 auto;
+	&__content {
+		height: 370px;
+		position: relative;
+		margin-bottom: 32px;
+		@media (max-width: 630px) {
+			margin-bottom: 15px;
+		}
+	}
+	&__background-image {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		&--1 {
+			background-image: url("../images/Media/img1.jpg");
+		}
+		&--2 {
+			background-image: url("../images/Media/img2.jpg");
+		}
+		&--3 {
+			background-image: url("../images/Media/img3.jpg");
+		}
+	}
+
+	&__content-figure {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		padding: 25px 30px;
+	}
+
+	&__category {
+		font-size: 12px;
+		color: #fff;
+		font-weight: 700;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+
+	&__title {
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		padding: 0px 30px 70px 30px;
+		font-size: 24px;
+		color: #ffffff;
+		text-transform: uppercase;
+		font-weight: 700;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+
+	&__content-figcaption {
+	}
+
+	&__text {
+		flex: 1;
+		font-size: 16px;
+		color: #646667;
+		margin-bottom: 38px;
+		@media (max-width: 630px) {
+			margin-bottom: 15px;
+		}
+	}
+
+	&__link {
+		font-size: 16px;
+		color: #007397;
+		font-weight: 700;
+		text-transform: uppercase;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
+
+/*=========================================ADAPTIVE==================================*/
+@media (max-width: 1170px) {
+	.container {
+		max-width: 970px; /*!*/
+	}
+	.menu__list li {
+		margin-right: 25px; /*!*/
+	}
+
+	.motto__text {
+		max-width: 670px; /*!*/
+		font-size: 28px; /*!*/
+		line-height: 44px; /*!*/
+	}
+	.index__parameter {
+		font-size: 14px;
+		line-height: 28px;
+	}
+
+	.ir {
+		&__title {
+			margin-bottom: 20px;
+		}
+		&__text {
+			margin-bottom: 34px;
+		}
+		&__index {
+			margin-bottom: 34px;
+		}
+	}
+
+	.about {
+		margin-bottom: 85px;
+	}
+
+	.item-media__title {
+		top: 175px;
+	}
+
+	.item-media__image.bluebg {
+		&:after {
+			width: 110%;
+			height: 150%;
+			top: -77px;
+			left: -88px;
+		}
+	}
+}
+/*====================НОВЫЙ БРЕЙКПОИНТ==============*/
+@media (max-width: 992px) {
+	.container {
+		max-width: 750px; /*!*/
+	}
+	.header__row {
+		height: 70px;
+	}
+
+	.menu__list li {
+		margin-right: 15px; /*!*/
+	}
+	.header__logo {
+		width: 130px;
+	}
+
+	.menu__link {
+		font-size: 11px;
+	}
+
+	.menu__link--location {
+		padding-right: 28px;
+	}
+
+	.menu__link--location:after {
+		width: 18px;
+		background-size: contain;
+		right: 5px;
+	}
+
+	.about__motto {
+		margin-bottom: 25px;
+	}
+
+	.motto {
+		height: 300px;
+	}
+
+	.motto__text {
+		max-width: 500px; /*!*/
+		font-size: 20px; /*!*/
+		line-height: 35px; /*!*/
+		bottom: 50px;
+	}
+
+	.text {
+		font-size: 16px;
+		line-height: 28px;
+	}
+
+	.centered-block__button {
+		margin-top: 25px;
+	}
+	.about {
+		margin-bottom: 75px;
+	}
+
+	.index__value {
+		font-size: 44px;
+	}
+
+	.index__parameter {
+		font-size: 11px;
+		line-height: 22px;
+	}
+
+	.ir {
+		&__title {
+			margin-bottom: 16px;
+		}
+		&__text {
+			margin-bottom: 26px;
+		}
+		&__index {
+			margin-bottom: 26px;
+		}
+	}
+	.about {
+		margin-bottom: 60px;
+	}
+	.item-media__image.bluebg {
+		&:after {
+			width: 110%;
+			height: 150%;
+			top: -77px;
+			left: -60px;
+		}
+	}
+
+	.item-media__title {
+		top: 75px;
+		font-size: 18px;
+		line-height: 24px;
+		max-width: 75%;
+	}
+}
+/*====================НОВЫЙ БРЕЙКПОИНТ==============*/
+@media (max-width: 767px) {
+	.header__row {
+		height: 50px;
+		padding: 0 10px;
+	}
+
+	.header__logo {
+		position: relative;
+		z-index: 2;
+	}
+
+	.header__menu {
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		top: -100%;
+		left: 0; /*По умолчанию убираем меню, чтобы вызвать его далее при нажатии на бургер*/
+		z-index: 1;
+		background-color: #fff;
+		padding: 100px 10px 20px 10px;
+		overflow: auto; /*Важный элемент адаптива, чтобы можно было на узких мобилках долистать до всех пунктов меню*/
+		transition: 0.5s 0s;
+		&.active {
 			top: 0;
 		}
+	}
+	.menu__list {
+		display: block;
+	}
 
-		.header__burger span:nth-child(2) {
-			top: 13px;
-			height: 4px;
-		}
-
-		.header__burger span:nth-child(3) {
-			bottom: 0;
-		}
-
-		.header__burger.active span:nth-child(1) {
-			transform: rotate(-45deg);
-			top: 13px;
-		}
-
-		.header__burger.active span:nth-child(2) {
-			display: none;
-		}
-
-		.header__burger.active span:nth-child(3) {
-			transform: rotate(45deg);
-			bottom: 13px;
-		}
-
-		.motto {
-			height: auto;
-			min-height: 250px;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-		}
-
-		.motto__text {
-			max-width: none;
-			text-align: center;
-			padding: 20px;
-			position: relative;
-			bottom: 0;
-		}
-
-		.button {
-			font-size: 14px;
-		}
-		.about {
-			margin-bottom: 50px;
-		}
-
-		.ir {
-			&__title {
-				margin-bottom: 12px;
-			}
-			&__text {
-				margin-bottom: 20px;
-			}
-			&__index {
-				margin-bottom: 20px;
-			}
-		}
-
-		.index {
-			flex-wrap: wrap;
-			justify-content: flex-start;
-		}
-		.index__item {
-			flex: 0 0 50%;
-			&--big {
-				flex: 0 0 100%;
-			}
-		}
-
-		.index__value {
-			font-size: 36px;
-		}
-
-		.index__parameter {
-			font-size: 11px;
-			line-height: 22px;
-		}
-
-		.title {
-			font-size: 25px;
-			line-height: 33px;
-		}
-
-		.text {
-			font-size: 16px;
-			line-height: 24px;
-		}
-
-		.media__radio {
-			&:not(:last-child) {
-				margin-right: 18px;
-			}
+	.menu__list li {
+		text-align: center;
+		margin: 0;
+		padding-bottom: 30px;
+		&:last-child {
+			padding-bottom: 0;
 		}
 	}
-	/*====================НОВЫЙ БРЕЙКПОИНТ==============*/
-	@media (max-width: 480px) {
-		.ir {
-			text-align: center;
-		}
-		.button {
-			display: flex;
-			justify-content: center;
-		}
 
-		.media__radio {
-			&:not(:last-child) {
-				margin-right: 27px;
-			}
+	.menu__link {
+		font-size: 16px;
+	}
+
+	/*В заготовках в свойствах бургера прописана позиция абсолют, 
+	но html-код в данной ситуации позволяет отказаться от абсолюта.*/
+	.header__burger {
+		display: block; /*Задает для бургера block, а не inline-block. 
+		Но разницы наверное нет, так как высота и ширина фикс.*/
+		width: 40px;
+		height: 30px;
+		position: relative;
+		cursor: pointer; /*!*/
+		z-index: 2;
+	}
+
+	.header__burger span {
+		position: absolute;
+		width: 100%;
+		height: 4px;
+		left: 0;
+		background-color: #646667;
+		transition: 0.3s 0s; /*!*/
+	}
+
+	.header__burger span:nth-child(1) {
+		top: 0;
+	}
+
+	.header__burger span:nth-child(2) {
+		top: 13px;
+		height: 4px;
+	}
+
+	.header__burger span:nth-child(3) {
+		bottom: 0;
+	}
+
+	.header__burger.active span:nth-child(1) {
+		transform: rotate(-45deg);
+		top: 13px;
+	}
+
+	.header__burger.active span:nth-child(2) {
+		display: none;
+	}
+
+	.header__burger.active span:nth-child(3) {
+		transform: rotate(45deg);
+		bottom: 13px;
+	}
+
+	.motto {
+		height: auto;
+		min-height: 250px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.motto__text {
+		max-width: none;
+		text-align: center;
+		padding: 20px;
+		position: relative;
+		bottom: 0;
+	}
+
+	.button {
+		font-size: 14px;
+	}
+	.about {
+		margin-bottom: 50px;
+	}
+
+	.ir {
+		&__title {
+			margin-bottom: 12px;
 		}
+		&__text {
+			margin-bottom: 20px;
+		}
+		&__index {
+			margin-bottom: 20px;
+		}
+	}
+
+	.index {
+		flex-wrap: wrap;
+		justify-content: flex-start;
+	}
+	.index__item {
+		flex: 0 0 50%;
+		&--big {
+			flex: 0 0 100%;
+		}
+	}
+
+	.index__value {
+		font-size: 36px;
+	}
+
+	.index__parameter {
+		font-size: 11px;
+		line-height: 22px;
+	}
+
+	.title {
+		font-size: 25px;
+		line-height: 33px;
+	}
+
+	.text {
+		font-size: 16px;
+		line-height: 24px;
+	}
+}
+/*====================НОВЫЙ БРЕЙКПОИНТ==============*/
+@media (max-width: 480px) {
+	.ir {
+		text-align: center;
+	}
+	.button {
+		display: flex;
+		justify-content: center;
 	}
 }
