--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,18 @@ body {
    color: #3c3f3d;
    font-family: "PT Serif", serif;
 }
+@media (max-width: 768px) {
+   .title {
+      font-size: 24px;
+      line-height: 32px;
+   }
+}
+@media (max-width: 480px) {
+   .title {
+      font-size: 20px;
+      line-height: 25px;
+   }
+}
 
 /*===================*/
 :root {
@@ -91,6 +103,7 @@ body {
 .wrapper {
    min-height: 100%;
    width: 100%;
+   padding-bottom: 40px;
 }
 
 .container {
@@ -373,102 +386,14 @@ main {
 }
 
 /*=========================================NEWS&MEDIA==================================*/
-/*.media {
-	&__header {
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
-
-	&__header-column {
-	}
-
-	&__title {
-	}
-
-	&__category {
-		display: inline-block;
-		font-size: 16px;
-		line-height: 16px;
-		letter-spacing: 1px;
-		color: #d3cfce;
-		font-weight: 700;
-		text-transform: uppercase;
-		&:not(:last-child) {
-			margin-right: 66px;
-		}
-		&:hover {
-			color: #007397;
-		}
-	}
-
-	&__body {
-		display: flex;
-		margin: 0 -15px;
-	}
-
-	&__column {
-		flex: 0 0 33.3333%;
-		padding: 0 15px;
-	}
-
-	.item-media {
-		&__category {
-			font-size: 12px;
-			line-height: 16px;
-			color: #ffffff;
-			margin-bottom: 30px;
-			overflow: hidden;
-			img {
-				max-width: 100%;
-			}
-		}
-
-		&__title {
-			position: absolute;
-			max-width: 310px;
-			width: calc(310 / 370 * 100%);
-			height: max-content;
-			top: 225px;
-			left: 30px;
-			font-size: 24px;
-			line-height: 32px;
-			letter-spacing: 1px;
-			color: #ffffff;
-			font-weight: 700;
-			text-transform: uppercase;
-		}
-
-		&__text {
-			font-size: 16px;
-			line-height: 32px;
-			color: #646667;
-			margin-bottom: 35px;
-		}
-
-		&__link {
-			display: inline-block;
-			font-size: 16px;
-			line-height: 16px;
-			letter-spacing: 1px;
-			color: #007397;
-			font-weight: 700;
-			text-transform: uppercase;
-			transition: 0.3s 0s;
-			&:hover {
-				background-color: #007397;
-				color: #fff;
-			}
-		}		font-weight: 700;
-		}
-
-		&__image {
-			display: inline-block;
-			position: relative;
-			width: fit-content;
-			height: fit-content;
-
-	}*/
+.media {
+   margin-bottom: 65px;
+}
+@media (max-width: 768px) {
+   .media {
+      margin-bottom: 15px;
+   }
+}
 .media__header {
    display: flex;
    justify-content: space-between;
@@ -516,7 +441,6 @@ main {
 .media__body {
    display: flex;
    margin: 0 -15px;
-   margin-bottom: 75px;
 }
 @media (max-width: 992px) {
    .media__body {
@@ -547,12 +471,23 @@ main {
 }
 .item-media__content {
    height: 370px;
+   max-height: 370px;
    position: relative;
    margin-bottom: 32px;
+}
+@media (max-width: 768px) {
+   .item-media__content {
+      height: 300px;
+   }
 }
 @media (max-width: 630px) {
    .item-media__content {
       margin-bottom: 15px;
+   }
+}
+@media (max-width: 480px) {
+   .item-media__content {
+      height: 240px;
    }
 }
 .item-media__background-image {
@@ -618,8 +553,98 @@ main {
    font-weight: 700;
    text-transform: uppercase;
 }
+@media (max-width: 768px) {
+   .item-media__link {
+      font-size: 14px;
+      line-height: 20px;
+   }
+}
+@media (max-width: 480px) {
+   .item-media__link {
+      font-size: 12px;
+      line-height: 18px;
+   }
+}
 .item-media__link:hover {
    text-decoration: underline;
+}
+
+/*========================================MAP========================================*/
+.country {
+   margin-bottom: 30px;
+}
+.country__title {
+   margin-bottom: 40px;
+}
+@media (max-width: 768px) {
+   .country__title {
+      margin-bottom: 15px;
+   }
+}
+.country__map {
+   height: -webkit-fit-content;
+   height: -moz-fit-content;
+   height: fit-content;
+   margin-bottom: 15px;
+}
+.country__map img {
+   min-height: 250px;
+   object-fit: cover;
+}
+
+.footer {
+   height: 40px;
+}
+.footer__body {
+   height: 100%;
+   display: flex;
+   align-items: center;
+}
+@media (max-width: 480px) {
+   .footer__body {
+      flex-direction: column;
+   }
+}
+.footer__company {
+   margin-right: auto;
+}
+@media (max-width: 480px) {
+   .footer__company {
+      margin: 0;
+   }
+}
+.footer__privacy-policy {
+   margin-left: 35px;
+}
+@media (max-width: 768px) {
+   .footer__privacy-policy {
+      margin-left: 15px;
+   }
+}
+@media (max-width: 480px) {
+   .footer__privacy-policy {
+      margin: 0;
+   }
+}
+
+.text-footer {
+   font-size: 12px;
+   line-height: 40px;
+   color: #646667;
+   font-weight: 700;
+   text-transform: uppercase;
+}
+@media (max-width: 768px) {
+   .text-footer {
+      line-height: 14px;
+      font-size: 10px;
+   }
+}
+@media (max-width: 480px) {
+   .text-footer {
+      line-height: 12px;
+      font-size: 8px;
+   }
 }
 
 /*=========================================ADAPTIVE==================================*/
@@ -926,11 +951,6 @@ main {
    .index__parameter {
       font-size: 11px;
       line-height: 22px;
-   }
-
-   .title {
-      font-size: 25px;
-      line-height: 33px;
    }
 
    .text {
