--- a/source/scss/styles.scss
+++ b/source/scss/styles.scss
@@ -81,9 +81,10 @@ main {
 	@media (max-width: 768px) {
 		position: fixed;
 		top: 0;
-		left: 0;
+		left: 0px;
 		width: 100%;
 		background-color: #fff;
+		padding: 0 15px;
 	}
 	/*ОБРАТИТЬ ВНИМАНИЕ! Задает высоту хэдера фиксом, а не через паддинги, как я хотел сделать. 
 		Задает высоту не самому тегу <header>, а его ближайшему потомку-обертке header-row.
@@ -714,7 +715,6 @@ main {
 @media (max-width: 767px) {
 	.header__row {
 		height: 50px;
-		padding: 0 10px;
 	}
 
 	.header__logo {
